--- a/南沙图书馆/src/news-net-show.html
+++ b/南沙图书馆/src/news-net-show.html
@@ -75,7 +75,26 @@
 								</div>
 								<div class="detail-content pdb20">
 									<div class="net-img-views">
-										
+										<div class="views">
+											<div class="view">
+												<img src="./assets/images/p12.png" alt="" />
+											</div>
+										</div>
+										<div class="thumbs">
+											<div class="thumb">
+												<img src="./assets/images/p13.png" alt="" />
+											</div>
+											<div class="thumb">
+												<img src="./assets/images/p13.png" alt="" />
+											</div>
+											<div class="thumb">
+												<img src="./assets/images/p13.png" alt="" />
+											</div>
+										</div>
+										<div class="views-nav">
+											<i class="icon icon-pic-arrow-top"></i>
+											<i class="icon icon-pic-arrow-down"></i>
+										</div>
 									</div>
 									<div class="editor">
 										<p>　　本报讯 今日（4月20日）下午，在第十七个“世界读书日”来临之际，位于广州市南沙区金蕉大道的南沙区图书馆举办了“悦读人生•幸福南沙”——“ 4•23”世界读书日系列活动暨广州少年儿童图书馆南沙分馆开放活动。来自南沙区金隆小学的约100多名少儿读者参加了该次活动，成为该馆的第一批小读者。 </p>
