--- a/南沙图书馆/src/news-talk.html
+++ b/南沙图书馆/src/news-talk.html
@@ -65,21 +65,26 @@
 							</div>
 						</div>
 						<div class="content-container">
-							<div class="talk-tabs">
-								<a href="javascript:;" class="active">讲座预告</a>
-								<a href="javascript:;">讲座预告</a>
-								<a href="javascript:;">
-									<i class="icon icon-tips">?</i>
-									报名方式
-									<div class="tooltip2">
+							<div class="site-tabs">
+								<ul>
+									<li><a href="javascript:;" class="active">讲座预告</a></li>
+									<li><a href="javascript:;">讲座预告</a></li>
+								</ul>
+								<div class="tooltips ml20">
+									<div class="control">
+										<i class="icon icon-tips">?</i>
+										报名方式
+									</div>
+									<div class="wrap">
 										<div class="arrow"></div>
-										电话39052638；读者QQ群 295517339、<br />
-										138627811、435684217；或直接到<br />
+										电话39052638；读者QQ群 295517339、
+										138627811、435684217；或直接到
 										南沙区图书馆服务前台报名。<br />
 									</div>
-								</a>
+								</div>
+								
 							</div>
-							<div class="talk-list">
+							<div class="talk-list mt30">
 								<ul>
 									<li>
 										<div class="img">
@@ -87,7 +92,7 @@
 										</div>
 										<div class="wrap">
 											<div class="dir">
-												第29讲
+												<span>第29讲</span>	
 												<div class="arrow"></div>
 											</div>
 											<div class="title">羊城少年学堂南沙图书馆第30讲——“迪士尼动漫与交响乐”</div>
@@ -103,6 +108,11 @@
 											<div class="item">
 												<strong>讲座内容：</strong> 通过畅游乐趣无限的迪士尼童话世界，畅游乐趣无限的迪士尼童话世界，你将会在讲座中通过畅游乐趣无限的迪士尼童话世界，畅游乐趣无限的迪士尼童话世界，你将会在讲座中学到中提琴的相关知识，体验交响乐的视听乐趣。学到中提琴的相关知识，体验交响乐的视听乐趣。
 											</div>
+											<div class="btns">
+												<a href="#" class="btn btn-primary btn-min">
+													视频回顾
+												</a>
+											</div>
 										</div>
 									</li>
 									<li>
@@ -110,8 +120,8 @@
 											<img src="./assets/images/p2.png" alt="" />
 										</div>
 										<div class="wrap">
-											<div class="dir">
-												第30讲
+											<div class="dir dir-past">
+												<span>第30讲</span>
 												<div class="arrow"></div>
 											</div>
 											<div class="title">羊城少年学堂南沙图书馆第30讲——“迪士尼动漫与交响乐”</div>
