--- a/南沙图书馆/src/reader-donate.html
+++ b/南沙图书馆/src/reader-donate.html
@@ -101,12 +101,12 @@
 								<i class="icon icon-mark"></i>
 								　　为了扩大馆藏文献收集，更好地为我省两个文明建设服务，吉林省图书馆欢迎党政机关、企事业单位、社会团体及个人捐赠图书。近年来我馆收到社会各界有识之士捐赠图书近万种，特别是一些知名专家学者捐赠了他们多年潜心研究发表的学术论文、专著、手稿，这对我馆馆藏文献建设，更好地服务于广大读者，有着特殊意义，全馆职工及各界读者向你们表示衷心的感谢。
 							</div>
-							<div class="donate">
-								<div class="donate-left">
+							<div class="donate mt30 row">
+								<div class="donate-left col-md-8">
 									<div class="editor">
-										<p>
+										<div class="mb10">
 											<strong class="font-16">捐赠办法与要求</strong>
-										</p>
+										</div>
 										<div class="color-sub">
 											<p>
 											公开及非公开编辑出版的图书，特别是图书内容涉及我省省情省貌，反映我省改革开放以来有关取得重要成果的地方文献资料，包括：史志、人名录、单位纪念册、族谱、历史沿革、风土人情等。
@@ -134,36 +134,39 @@
 
 									</div>
 								</div>
-								<div class="donate-right">
+								<div class="donate-right col-md-4">
+									<div class="mb10">
+										<strong class="font-16">捐赠通告</strong>
+									</div>
 									<div class="donate-list">
 										<ul>
 											<li>
-												<div class="t">新希望有限公司</div>
-												<div class="text">捐赠《成长的烦恼(第三季）完整版（MP3互动软件）》等13册图书</div>
+												<div class="font-16">新希望有限公司</div>
+												<div class="text text-info">捐赠《成长的烦恼(第三季）完整版（MP3互动软件）》等13册图书</div>
 											</li>
 											<li>
-												<div class="t">新希望有限公司</div>
-												<div class="text">捐赠《成长的烦恼(第三季 完整版（MP3互动软件）》等13册图书 完整版（MP3互动软件）》等13册图书</div>
+												<div class="font-16">新希望有限公司</div>
+												<div class="text text-info">捐赠《成长的烦恼(第三季 完整版（MP3互动软件）》等13册图书 完整版（MP3互动软件）》等13册图书</div>
 											</li>
 											<li>
-												<div class="t">新希望有限公司</div>
-												<div class="text">捐赠《成长的烦恼(第三季）完整版（MP3互动软件）》等13册图书</div>
+												<div class="font-16">新希望有限公司</div>
+												<div class="text text-info">捐赠《成长的烦恼(第三季）完整版（MP3互动软件）》等13册图书</div>
 											</li>
 											<li>
-												<div class="t">新希望有限公司</div>
-												<div class="text">捐赠《成长的烦件）》等13册图书</div>
+												<div class="font-16">新希望有限公司</div>
+												<div class="text text-info">捐赠《成长的烦件）》等13册图书</div>
 											</li>
 											<li>
-												<div class="t">新希望有限公司</div>
-												<div class="text">捐赠《成长的烦恼(第三季）完整版（MP3互动软件）》等13册图书</div>
+												<div class="font-16">新希望有限公司</div>
+												<div class="text text-info">捐赠《成长的烦恼(第三季）完整版（MP3互动软件）》等13册图书</div>
 											</li>
 											<li>
-												<div class="t">新希望有限公司</div>
-												<div class="text">捐赠《成长的烦恼(第三软件）》等13册图书</div>
+												<div class="font-16">新希望有限公司</div>
+												<div class="text text-info">捐赠《成长的烦恼(第三软件）》等13册图书</div>
 											</li>
 											<li>
-												<div class="t">新希望有限公司</div>
-												<div class="text">捐赠《成长的烦恼(第三季）完整版（MP3互动软件）》等13册图书</div>
+												<div class="font-16">新希望有限公司</div>
+												<div class="text text-info">捐赠《成长的烦恼(第三季）完整版（MP3互动软件）》等13册图书</div>
 											</li>
 										</ul>
 									</div>
