--- a/南沙图书馆/src/reader-question-show.html
+++ b/南沙图书馆/src/reader-question-show.html
@@ -105,16 +105,22 @@
 									</div>
 								</div>
 							</div>
-							<div>您好，图书馆正在开展居民健康素养现状调查，目的是了解附近地区居民健康知识和技能水平，您的参与对我们非常重要，回答的内容将会被严格保密，采取匿名方式，题目选项不存在对错之分，不会给您带来不便。调查结果是评价居民健康素养水平，制定卫生相关政策的重要依据。</div>
+							<div class="mb30">您好，图书馆正在开展居民健康素养现状调查，目的是了解附近地区居民健康知识和技能水平，您的参与对我们非常重要，回答的内容将会被严格保密，采取匿名方式，题目选项不存在对错之分，不会给您带来不便。调查结果是评价居民健康素养水平，制定卫生相关政策的重要依据。</div>
 							<div class="user-question-list">
 								<ul>
 									<li>
 										<div class="t">1、您的性别</div>
 										<div class="text">
+											<div class="item">
+
+											</div>
 											<label>
 												<input type="radio" class="type" name="a1">
 												&nbsp; <span class="mr50">男</span>
 											</label>
+											<div class="item">
+
+											</div>
 											<label>
 												<input type="radio" class="type" name="a1">
 												&nbsp; <span class="mr50">女</span>
@@ -124,22 +130,37 @@
 									<li>
 										<div class="t">2、您的年龄</div>
 										<div class="text">
+											<div class="item">
+
+											</div>
 											<label>
 												<input type="radio" class="type" name="a2">
 												&nbsp; <span class="mr50">15岁以下</span>
 											</label>
+											<div class="item">
+
+											</div>
 											<label>
 												<input type="radio" class="type" name="a2">
 												&nbsp; <span class="mr50">16-23岁</span>
 											</label>
+											<div class="item">
+
+											</div>
 											<label>
 												<input type="radio" class="type" name="a2">
 												&nbsp; <span class="mr50">24-30岁</span>
 											</label>
+											<div class="item">
+
+											</div>
 											<label>
 												<input type="radio" class="type" name="a2">
 												&nbsp; <span class="mr50">31-40岁</span>
 											</label>
+											<div class="item">
+
+											</div>
 											<label>
 												<input type="radio" class="type" name="a2">
 												&nbsp; <span class="mr50">41岁以上</span>
@@ -149,10 +170,16 @@
 									<li>
 										<div class="t">3、你是否用过阅读类APP软件</div>
 										<div class="text">
+											<div class="item">
+
+											</div>
 											<label>
 												<input type="radio" class="type" name="a3">
 												&nbsp; <span class="mr50">是</span>
 											</label>
+											<div class="item">
+
+											</div>
 											<label>
 												<input type="radio" class="type" name="a3">
 												&nbsp; <span class="mr50">否</span>
@@ -162,18 +189,30 @@
 									<li>
 										<div class="t">4、常用的阅读app有哪些</div>
 										<div class="text">
+											<div class="item">
+
+											</div>
 											<label>
 												<input type="checkbox" class="type" name="a4">
 												&nbsp; <span class="mr50">QQ阅读</span>
 											</label>
+											<div class="item">
+
+											</div>
 											<label>
 												<input type="checkbox" class="type" name="a4">
 												&nbsp; <span class="mr50">书旗阅读</span>
 											</label>
+											<div class="item">
+
+											</div>
 											<label>
 												<input type="checkbox" class="type" name="a4">
 												&nbsp; <span class="mr50">和阅读</span>
 											</label>
+											<div class="item">
+
+											</div>
 											<label>
 												<input type="checkbox" class="type" name="a4">
 												&nbsp; <span class="mr50">掌阅iReader</span>
@@ -183,27 +222,33 @@
 									<li>
 										<div class="t">5、说说您对阅读app期望会有哪些功能</div>
 										<div class="text">
-											<textarea class="form-control"></textarea>
+											<div class="item">
+												<textarea rows="5" placeholder="请输入" class="form-control w700"></textarea>
+											</div>
 										</div>
 									</li>
 									<li>
 										<div class="t">6、如何称呼您？</div>
 										<div class="text">
-											<input class="form-control"></input>
+											<div class="item">
+												<input class="form-control  w700" placeholder="请输入"></input>
+											</div>
 										</div>
 									</li>
 									<li>
 										<div class="t">7、下拉选择题</div>
 										<div class="text">
-											<select name="" id="">
-												<option value=""></option>
-												<option value="">选择题1</option>
-												<option value="">选择题2</option>
-											</select>
+											<div class="item">
+												<select name="" id="" placeholder="请选择" class="form-control w700">
+													<option value=""></option>
+													<option value="">选择题1</option>
+													<option value="">选择题2</option>
+												</select>
+											</div>
 										</div>
 									</li>
 									<li>
-										<div class="btns">
+										<div class="btns mt20">
 											<button class="btn btn-primary">提交</butto>
 										</div>
 									</li>
