add swiper css , swiper js

--- a/南沙图书馆/src/about.html
+++ b/南沙图书馆/src/about.html
@@ -94,6 +94,7 @@
 									</a>
 								</div>
 							</div>
+							<!-- 图片预览js -->
 							<script>
 								$(document).ready(function(){
 									if ($("#views .item").length > 0){
