--- a/南沙图书馆/src/news-talk.html
+++ b/南沙图书馆/src/news-talk.html
@@ -67,8 +67,8 @@
 						<div class="content-container">
 							<div class="site-tabs">
 								<ul>
-									<li><a href="javascript:;" class="active">讲座预告</a></li>
-									<li><a href="javascript:;">讲座预告</a></li>
+									<li class="active"><a href="javascript:;">讲座预告</a></li>
+									<li><a href="javascript:;">往期讲座</a></li>
 								</ul>
 								<div class="tooltips ml20">
 									<div class="control">
@@ -82,66 +82,137 @@
 										南沙区图书馆服务前台报名。<br />
 									</div>
 								</div>
-								
+								<!-- 隐藏显示div -->
+								<script>
+									$(document).ready(function(){
+										$(".tooltips").hover(function(){
+											$(this).find(".wrap").show()
+										},function(){
+											$(this).find(".wrap").hide()
+										})
+									})
+								</script>
 							</div>
-							<div class="talk-list mt30">
-								<ul>
-									<li>
-										<div class="img">
-											<img src="./assets/images/p2.png" alt="" />
-										</div>
-										<div class="wrap">
-											<div class="dir">
-												<span>第29讲</span>	
-												<div class="arrow"></div>
-											</div>
-											<div class="title">羊城少年学堂南沙图书馆第30讲——“迪士尼动漫与交响乐”</div>
-											<div class="item">
-												<strong>讲座时间：</strong> 2019年1月13日 下午15:00
-											</div>
-											<div class="item">
-												<strong>讲座地点：</strong> 南沙区图书馆三楼多功能室
-											</div>
-											<div class="item">
-												<strong>讲座嘉宾：</strong> 赵兵，广东广播电视台大型节目部国际导演，舞台美术家。
-											</div>
-											<div class="item">
-												<strong>讲座内容：</strong> 通过畅游乐趣无限的迪士尼童话世界，畅游乐趣无限的迪士尼童话世界，你将会在讲座中通过畅游乐趣无限的迪士尼童话世界，畅游乐趣无限的迪士尼童话世界，你将会在讲座中学到中提琴的相关知识，体验交响乐的视听乐趣。学到中提琴的相关知识，体验交响乐的视听乐趣。
-											</div>
-											<div class="btns">
-												<a href="#" class="btn btn-primary btn-min">
-													视频回顾
-												</a>
-											</div>
-										</div>
-									</li>
-									<li>
-										<div class="img">
-											<img src="./assets/images/p2.png" alt="" />
-										</div>
-										<div class="wrap">
-											<div class="dir dir-past">
-												<span>第30讲</span>
-												<div class="arrow"></div>
-											</div>
-											<div class="title">羊城少年学堂南沙图书馆第30讲——“迪士尼动漫与交响乐”</div>
-											<div class="item">
-												<strong>讲座时间：</strong> 2019年1月13日 下午15:00
-											</div>
-											<div class="item">
-												<strong>讲座地点：</strong> 南沙区图书馆三楼多功能室
-											</div>
-											<div class="item">
-												<strong>讲座嘉宾：</strong> 赵兵，广东广播电视台大型节目部国际导演，舞台美术家。
-											</div>
-											<div class="item">
-												<strong>讲座内容：</strong> 通过畅游乐趣无限的迪士尼童话世界，畅游乐趣无限的迪士尼童话世界，你将会在讲座中学到中提琴的相关知识，体验交响乐的视听乐趣。
-											</div>
-										</div>
-									</li>
-								</ul>
+							<div class="site-tabs-content mt30">
+								<div class="panel">
+									<div class="talk-list">
+										<ul>
+											<li>
+												<div class="img">
+													<img src="./assets/images/p2.png" alt="" />
+												</div>
+												<div class="wrap">
+													<div class="dir">
+														<span>第29讲</span>	
+														<div class="arrow"></div>
+													</div>
+													<div class="title">羊城少年学堂南沙图书馆第30讲——“迪士尼动漫与交响乐”</div>
+													<div class="item">
+														<strong>讲座时间：</strong> 2019年1月13日 下午15:00
+													</div>
+													<div class="item">
+														<strong>讲座地点：</strong> 南沙区图书馆三楼多功能室
+													</div>
+													<div class="item">
+														<strong>讲座嘉宾：</strong> 赵兵，广东广播电视台大型节目部国际导演，舞台美术家。
+													</div>
+													<div class="item">
+														<strong>讲座内容：</strong> 通过畅游乐趣无限的迪士尼童话世界，畅游乐趣无限的迪士尼童话世界，你将会在讲座中通过畅游乐趣无限的迪士尼童话世界，畅游乐趣无限的迪士尼童话世界，你将会在讲座中学到中提琴的相关知识，体验交响乐的视听乐趣。学到中提琴的相关知识，体验交响乐的视听乐趣。
+													</div>
+												</div>
+											</li>
+											<li>
+												<div class="img">
+													<img src="./assets/images/p2.png" alt="" />
+												</div>
+												<div class="wrap">
+													<div class="dir">
+														<span>第30讲</span>
+														<div class="arrow"></div>
+													</div>
+													<div class="title">羊城少年学堂南沙图书馆第30讲——“迪士尼动漫与交响乐”</div>
+													<div class="item">
+														<strong>讲座时间：</strong> 2019年1月13日 下午15:00
+													</div>
+													<div class="item">
+														<strong>讲座地点：</strong> 南沙区图书馆三楼多功能室
+													</div>
+													<div class="item">
+														<strong>讲座嘉宾：</strong> 赵兵，广东广播电视台大型节目部国际导演，舞台美术家。
+													</div>
+													<div class="item">
+														<strong>讲座内容：</strong> 通过畅游乐趣无限的迪士尼童话世界，畅游乐趣无限的迪士尼童话世界，你将会在讲座中学到中提琴的相关知识，体验交响乐的视听乐趣。
+													</div>
+												</div>
+											</li>
+										</ul>
+									</div>
+								</div>
+								<div class="panel">
+									<div class="talk-list">
+										<ul>
+											<li>
+												<div class="img">
+													<img src="./assets/images/p2.png" alt="" />
+												</div>
+												<div class="wrap">
+													<div class="dir dir-past">
+														<span>第29讲</span>	
+														<div class="arrow"></div>
+													</div>
+													<div class="title">羊城少年学堂南沙图书馆第30讲——“迪士尼动漫与交响乐”</div>
+													<div class="item">
+														<strong>讲座时间：</strong> 2019年1月13日 下午15:00
+													</div>
+													<div class="item">
+														<strong>讲座地点：</strong> 南沙区图书馆三楼多功能室
+													</div>
+													<div class="item">
+														<strong>讲座嘉宾：</strong> 赵兵，广东广播电视台大型节目部国际导演，舞台美术家。
+													</div>
+													<div class="item">
+														<strong>讲座内容：</strong> 通过畅游乐趣无限的迪士尼童话世界，畅游乐趣无限的迪士尼童话世界，你将会在讲座中通过畅游乐趣无限的迪士尼童话世界，畅游乐趣无限的迪士尼童话世界，你将会在讲座中学到中提琴的相关知识，体验交响乐的视听乐趣。学到中提琴的相关知识，体验交响乐的视听乐趣。
+													</div>
+													<div class="btns">
+														<a href="#" class="btn btn-primary btn-min">
+															视频回顾
+														</a>
+													</div>
+												</div>
+											</li>
+											<li>
+												<div class="img">
+													<img src="./assets/images/p2.png" alt="" />
+												</div>
+												<div class="wrap">
+													<div class="dir dir-past">
+														<span>第30讲</span>	
+														<div class="arrow"></div>
+													</div>
+													<div class="title">羊城少年学堂南沙图书馆第30讲——“迪士尼动漫与交响乐”</div>
+													<div class="item">
+														<strong>讲座时间：</strong> 2019年1月13日 下午15:00
+													</div>
+													<div class="item">
+														<strong>讲座地点：</strong> 南沙区图书馆三楼多功能室
+													</div>
+													<div class="item">
+														<strong>讲座嘉宾：</strong> 赵兵，广东广播电视台大型节目部国际导演，舞台美术家。
+													</div>
+													<div class="item">
+														<strong>讲座内容：</strong> 通过畅游乐趣无限的迪士尼童话世界，畅游乐趣无限的迪士尼童话世界，你将会在讲座中通过畅游乐趣无限的迪士尼童话世界，畅游乐趣无限的迪士尼童话世界，你将会在讲座中学到中提琴的相关知识，体验交响乐的视听乐趣。学到中提琴的相关知识，体验交响乐的视听乐趣。
+													</div>
+													<div class="btns">
+														<a href="#" class="btn btn-primary btn-min">
+															视频回顾
+														</a>
+													</div>
+												</div>
+											</li>
+										</ul>
+									</div>
+								</div>
 							</div>
-
 						</div>
 					</div>
 				</div>
