--- a/南沙图书馆/src/reader-book-show.html
+++ b/南沙图书馆/src/reader-book-show.html
@@ -46,7 +46,7 @@
 						</div>
 						<div class="nav">
 							<ul>
-								<li class="active">
+								<li>
 									<a href="javascript:;">读者须知</a>
 									<dl>
 										<dd><a href="reader.html">办证须知</a></dd>
@@ -55,10 +55,10 @@
 										<dd><a href="#">功能布局</a></dd>
 									</dl>
 								</li>
-								<li>
+								<li class="active">
 									<a href="javascript:;">图书推荐</a>
 									<dl>
-										<dd><a href="#">新书介绍</a></dd>
+										<dd class="active"><a href="#">新书介绍</a></dd>
 										<dd><a href="#">本地文献推荐</a></dd>
 										<dd><a href="#">主题阅读</a></dd>
 									</dl>
